spec/testcasedatajava/CannotBeAppliedToTest.txt
./org/example/RecursiveMath.java:12: error: method power in class RecursiveMath cannot be applied to given types;
            return 1/power();
                     ^
  required: int,int
  found: no arguments
  reason: actual and formal argument lists differ in length
1 error
make: *** [Makefile:5: test] Error 1
